--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
                 <h2 class="section__title">Skills</h2>
-                <span class="section__subtitle">My Techincal Level</span>
+                <span class="section__subtitle">My Technical Level</span>
 
                 <div class="skills__container container grid">
                     <!--==================== SKILLS 1 ====================-->
